WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
149953
Modern IDB: WebWorker support
https://bugs.webkit.org/show_bug.cgi?id=149953
Summary
Modern IDB: WebWorker support
Nolan Lawson
Reported
2015-10-09 07:11:17 PDT
Created
attachment 262769
[details]
Reproducible test case Inside of a web worker, typeof indexedDB === 'undefined'. Also openDatabase is undefined, although I understand that that's working as intended [1]. I've attached a test case to reproduce. You can also see a live version here:
http://bl.ocks.org/nolanlawson/raw/67a02c9395391dc0c11d/
[1]:
https://code.google.com/p/chromium/issues/detail?id=434740#c4
Tested on WebKit Nightly, 10601.2.7.1,
r190775
.
Attachments
Reproducible test case
(1.26 KB, text/html)
2015-10-09 07:11 PDT
,
Nolan Lawson
no flags
Details
Patch
(1.33 KB, patch)
2016-05-10 20:30 PDT
,
Brady Eidson
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews101 for mac-yosemite
(874.78 KB, application/zip)
2016-05-10 23:09 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews105 for mac-yosemite-wk2
(808.05 KB, application/zip)
2016-05-10 23:26 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews126 for ios-simulator-wk2
(601.15 KB, application/zip)
2016-05-10 23:32 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews115 for mac-yosemite
(1.33 MB, application/zip)
2016-05-10 23:44 PDT
,
Build Bot
no flags
Details
Patch v2
(2.91 KB, patch)
2016-05-11 11:55 PDT
,
Brady Eidson
achristensen
: review+
Details
Formatted Diff
Diff
Show Obsolete
(6)
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-03-25 15:55:06 PDT
***
Bug 154129
has been marked as a duplicate of this bug. ***
Brady Eidson
Comment 2
2016-05-05 18:46:15 PDT
Once the patch in
https://bugs.webkit.org/show_bug.cgi?id=157398
lands, all that *should* be left is flipping the runtime switch, combined with lots of tests. That will be done here in this bug.
Brady Eidson
Comment 3
2016-05-06 13:13:34 PDT
<
rdar://problem/25605348
>
Brady Eidson
Comment 4
2016-05-10 20:30:48 PDT
Created
attachment 278574
[details]
Patch This is a patch to enable IDB-in-workers by default. Not marking for review yet until after
https://bugs.webkit.org/show_bug.cgi?id=157448
is resolved.
Build Bot
Comment 5
2016-05-10 23:09:42 PDT
Comment on
attachment 278574
[details]
Patch
Attachment 278574
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1302114
New failing tests: imported/w3c/web-platform-tests/IndexedDB/idb_webworkers.htm imported/w3c/IndexedDB-private-browsing/idb_webworkers.html
Build Bot
Comment 6
2016-05-10 23:09:46 PDT
Created
attachment 278593
[details]
Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 7
2016-05-10 23:26:07 PDT
Comment on
attachment 278574
[details]
Patch
Attachment 278574
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1302129
New failing tests: imported/w3c/web-platform-tests/IndexedDB/idb_webworkers.htm imported/w3c/IndexedDB-private-browsing/idb_webworkers.html
Build Bot
Comment 8
2016-05-10 23:26:10 PDT
Created
attachment 278595
[details]
Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 9
2016-05-10 23:32:45 PDT
Comment on
attachment 278574
[details]
Patch
Attachment 278574
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1302132
New failing tests: imported/w3c/web-platform-tests/IndexedDB/idb_webworkers.htm imported/w3c/IndexedDB-private-browsing/idb_webworkers.html
Build Bot
Comment 10
2016-05-10 23:32:49 PDT
Created
attachment 278597
[details]
Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 11
2016-05-10 23:44:38 PDT
Comment on
attachment 278574
[details]
Patch
Attachment 278574
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1302139
New failing tests: imported/w3c/web-platform-tests/IndexedDB/idb_webworkers.htm imported/w3c/IndexedDB-private-browsing/idb_webworkers.html
Build Bot
Comment 12
2016-05-10 23:44:42 PDT
Created
attachment 278598
[details]
Archive of layout-test-results from ews115 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews115 Port: mac-yosemite Platform: Mac OS X 10.10.5
Brady Eidson
Comment 13
2016-05-11 11:55:14 PDT
Created
attachment 278647
[details]
Patch v2
Brady Eidson
Comment 14
2016-05-11 12:47:13 PDT
The build failure on the EWS bots: /Volumes/Data/EWS/WebKit/WebKitBuild/WebCore.build/Release/WebCoreTestSupport.build/Objects-normal/i386/JSInternalSettingsGenerated.dia -c /Volumes/Data/EWS/WebKit/WebKitBuild/Release/DerivedSources/WebCore/JSInternalSettingsGenerated.cpp -o /Volumes/Data/EWS/WebKit/WebKitBuild/WebCore.build/Release/WebCoreTestSupport.build/Objects-normal/i386/JSInternalSettingsGenerated.o /Volumes/Data/EWS/WebKit/WebKitBuild/Release/DerivedSources/WebCore/JSInternalSettingsGenerated.cpp:2431:10: error: no member named 'setShouldConvertInvalidURLsToBlank' in 'WebCore::InternalSettingsGenerated' impl.setShouldConvertInvalidURLsToBlank(WTFMove(shouldConvertInvalidURLsToBlank)); Is *not* related to this patch.
Alex Christensen
Comment 15
2016-05-11 12:53:52 PDT
Comment on
attachment 278647
[details]
Patch v2 Hooray!
Brady Eidson
Comment 16
2016-05-11 12:57:32 PDT
http://trac.webkit.org/changeset/200697
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug