Modern IDB: WebWorker support. https://bugs.webkit.org/show_bug.cgi?id=149953

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

* IndexedDB-private-browsing/idb_webworkers-expected.txt:
* web-platform-tests/IndexedDB/idb_webworkers-expected.txt:

Source/WebCore:

No new tests (Covered by changes to existing tests).

* bindings/generic/RuntimeEnabledFeatures.cpp:
(WebCore::RuntimeEnabledFeatures::RuntimeEnabledFeatures):

Canonical link: https://commits.webkit.org/175715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200697 268f45cc-cd09-0410-ab3c-d52691b4dbfc